mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
     app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
        app:mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - name: mongodbport
          containerPort: 27017
          protocol: TCP
        -name: MONGO_INITDB_ROOT_USERNAME
         value:
        -name: MONGO_INITDB_ROOT_PASSWORD
         value:
