dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: default-http-backend
spec:
  selector:
    app: default-response-app
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 8080
